# sys101-s25-fedavg

./: Cargo.toml  README.md
src/: lib.rs  model.rs  protocol.rs  util.rs
