[package]
name = "fedavg-rust"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Federated Averaging (FedAvg) server & client using Rust + Candle + Axum"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures = "0.3"
thiserror = "1.0"
rand = "0.8"                      

candle-core     = { git = "https://github.com/huggingface/candle", package = "candle-core",     branch = "main" }
candle-nn       = { git = "https://github.com/huggingface/candle", package = "candle-nn",       branch = "main" }
candle-datasets = { git = "https://github.com/huggingface/candle", package = "candle-datasets", branch = "main" }

[features]
default = []
cpu = []

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
